--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="en"><head>
   <meta charset="utf-8">
   <title>ApiDemo</title>
-  <base href="https://phucch1109.github.io/apiDemo/">
+  <base href="/apiDemo">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <style>body{font:300 16px/1 Muli,Tahoma,sans-serif;color:#505050;height:100%;margin:0}*{margin:0;padding:0;font-family:Arial,Helvetica,sans-serif}</style><link rel="stylesheet" href="styles.ef9ad2da28fd8a6b.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.ef9ad2da28fd8a6b.css"></noscript></head>
